deploy-py.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cms
  namespace: toqqer-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cms
  template:
    metadata:
      labels:
        app: cms
    spec:
      tolerations:
        - key: "node-role.kubernetes.io/master"
          operator: "Exists"
          effect: "NoSchedule"
      containers:
        - name: cms
          image: python:3.11-slim
          command: ["python3", "-m", "http.server", "8080"]
          ports:
            - containerPort: 8080
