cms-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cms-service
  namespace: toqqer-test
spec:
  type: ClusterIP
  selector:
    app: cms
  ports:
    - port: 8080
      targetPort: 8080
