ingress-servicecontroller.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-controller
  namespace: toqqer-test
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: ingress-nginx   # match your ingress controller labels exactly!
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080    # optional; specify your NodePort here, between 30000-32767
    - name: https
      port: 443
      targetPort: 443
      nodePort: 30443
