ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cms-ingress
  namespace: toqqer-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: cms.toqqer.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cms-service
                port:
                  number: 8080
